Fixed footer alignment and social link spacing

--- a/public/assets/css/tkgreen/main.css
+++ b/public/assets/css/tkgreen/main.css
@@ -706,11 +706,9 @@ a:hover, a:focus {
   padding: 0;
 }
 .footer-socialLinks .socialLinks {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
-  gap: 0.25em;
-  font-size: 1.75em;
-  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
   justify-content: center;
 }
 .footer-socialLinks .socialLinks .social-icon {
@@ -722,10 +720,8 @@ a:hover, a:focus {
 }
 .footer-title {
   font-family: "Roboto", sans-serif;
-  margin: 0;
-  margin-block-end: 0.25rem;
-  padding: 0;
-  font-size: 1rem;
+  margin-block-end: 0.75rem;
+  font-size: 1.3rem;
 }
 .footer-about {
   text-align: center;
@@ -737,6 +733,7 @@ a:hover, a:focus {
   background-color: #032f70;
   color: hsl(100deg, 0%, 98%);
   width: min(100% - 1em, 60rem);
+  text-align: center;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 0.75em;
